// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #B0B5BD;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: default;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<body>
    <div>
      <label
        class="c0"
        disabled=""
        role="switch"
      >
        <input
          class="c1"
          data-testid="element"
          disabled=""
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
          disabled=""
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #B0B5BD;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: default;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<div>
    <label
      class="c0"
      disabled=""
      role="switch"
    >
      <input
        class="c1"
        data-testid="element"
        disabled=""
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
        disabled=""
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toggle should render component with left labelPosition 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-right: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<body>
    <div>
      <label
        class="c0"
        role="switch"
      >
        <input
          class="c1"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-right: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row-reverse;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<div>
    <label
      class="c0"
      role="switch"
    >
      <input
        class="c1"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toggle should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<body>
    <div>
      <label
        class="c0"
        role="switch"
      >
        <input
          class="c1"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(16px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(16px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 16px;
  height: 16px;
  border-radius: 16px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 36px;
  height: 36px;
  border-radius: 36px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 36px;
  height: 20px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<div>
    <label
      class="c0"
      role="switch"
    >
      <input
        class="c1"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Toggle should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(12px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(12px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 28px;
  height: 16px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 12px;
  height: 12px;
  border-radius: 12px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 32px;
  height: 32px;
  border-radius: 32px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 28px;
  height: 16px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<body>
    <div>
      <label
        class="c0"
        role="switch"
      >
        <input
          class="c1"
          data-testid="element"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            aria-hidden="true"
            class="c4"
          />
        </div>
        <div
          class="c5"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c1 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
}

.c1:disabled {
  cursor: default;
}

.c1:checked+div>span {
  background: #0062FF;
}

.c1:checked+div>span:before {
  left: calc(12px + 2px);
}

.c1:checked:disabled+div>span {
  background: #A7C7FF;
}

.c1:checked+div>div {
  left: calc(12px + -12px + 4px);
}

.c1:not(:disabled):focus-visible+div>span {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c1:not(:disabled):hover+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:focus-visible+div>span {
  outline: none;
}

.c1:not(:disabled):active+div>div {
  visibility: visible;
  background: #0000001F;
}

.c5 {
  display: flex;
  flex-direction: column;
  margin-left: 8px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
}

.c4 {
  position: absolute;
  border-radius: 10px;
  flex-shrink: 0;
  width: 28px;
  height: 16px;
  background: #717681;
}

.c4:before {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  background: #FFFFFF;
  transition: all 0.3s;
  width: 12px;
  height: 12px;
  border-radius: 12px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  top: -8px;
  left: -8px;
  background: #0000000D;
  width: 32px;
  height: 32px;
  border-radius: 32px;
}

.c2 {
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 28px;
  height: 16px;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  position: relative;
  width: fit-content;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
}

<div>
    <label
      class="c0"
      role="switch"
    >
      <input
        class="c1"
        data-testid="element"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          aria-hidden="true"
          class="c4"
        />
      </div>
      <div
        class="c5"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
